[package]
name = "ascii_image"
version = "0.1.0"
edition = "2021"
about = "It converts images to ascii characters and prints them in the terminal"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
terminal_size = "0.3.0"


[lib]
name = "ascii_lib"
path = "src/lib.rs"


[[bin]]
name = "ascii-image"
path = "src/bin/main.rs"
